# streamduck

./: .env.example  .gitignore  COVERAGE.md  LICENSE  README.md  clear_checkpoints.sh  pyproject.toml  test_checkpoint_resumption.sh  test_graceful_shutdown.sh  test_shutdown.sh  verify_motherduck.py
.github/: WORKFLOWS.md  copilot-instructions.md
.github/workflows/: ci-cd.yml  copilot-setup-steps.yml  tests.yml
docs/: coverage-improvement-plan.md
docs/coverage-issues/: README.md  issue-01-cli-tests.md  issue-02-error-handling.md  issue-03-edge-cases.md  issue-04-config-validation.md  issue-05-integration-tests.md  issue-06-init-tests.md  issue-07-main-tests.md
legacy/: snowflake.py
src/: __init__.py  __main__.py  main.py
src/consumers/: __init__.py  eventhub.py
src/pipeline/: __init__.py  orchestrator.py
src/streamduck/: __init__.py
src/streaming/: __init__.py  motherduck.py
src/utils/: __init__.py  config.py  motherduck.py  smart_retry.py
tests/: __init__.py  conftest.py  test_azure_llm.py
tests/integration/: __init__.py  test_pipeline_integration.py  test_smart_retry_integration.py
tests/unit/: __init__.py  test_checkpoint_manager.py  test_cli.py  test_config.py  test_eventhub_consumer.py  test_logfire_config.py  test_message_batch.py  test_motherduck_streaming.py  test_motherduck_utils.py  test_orchestrator.py  test_package_init.py  test_smart_retry.py
