[project]
name = "streamduck"
version = "0.1.0"
description = "StreamDuck - Azure EventHub to MotherDuck streaming pipeline"
readme = "README.md"
authors = [
    { name = "MiguelElGallo", email = "60221874+MiguelElGallo@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "azure-eventhub>=5.15.0",
    "azure-identity>=1.15.0",
    "aiohttp>=3.9.0",
    "duckdb>=0.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.19.2",
    "rich>=13.0.0",
    "mypy>=1.18.2",
]

[project.scripts]
streamduck = "main:cli_main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "azure.*",
    "duckdb.*",
    "pydantic.*",
    "pydantic_settings.*",
    "dotenv.*",
    "typer.*",
    "rich.*"
]
ignore_missing_imports = true
